--- a/Turtle1.css
+++ b/Turtle1.css
@@ -37,12 +37,12 @@ header li{
 
 header a{
     text-decoration:none;
-    color:white;
+    color:#002245;
     text-align: center;
     
 }
-#showcase{
-    background:url("turtlesWithOtherFishes.PNG")no-repeat;
+.showcase{
+    background:url("Underwater".PNG)no-repeat;
     background-size: cover;
     min-height: 500px;
     color:white;
